# PhiBuilder

./: .gitignore  AGENTS.md  CONTEXT.md  pyproject.toml
.github/workflows/: ci.yml
algo/: 01_decisions.md
docs/: 01_architecture.md  02_phibuilder.md  03_larccommon.md  etat_projet.md  historique_construction.md
larccommon/: __init__.py  app_config.py  auth.py  config_loader.py  database.py  design_system.py  event_helpers.py  icons.py  logger.py  login.py  network.py  photos.py  preferences_dialog.py  session.py  theme.py
larccommon/l10n/: __init__.py  en.json  fr.json
larccommon/widgets/: __init__.py  avatar.py  card.py  card_config.py  card_grid.py  file_panel.py  file_resolver.py  file_viewer.py  table_settings.py
phibuilder/: __init__.py  builder.py
phibuilder/phi/: __init__.py  constants.py  grid.py  layout.py  scale.py  sequence.py
phibuilder/style/: __init__.py  builder.py
phibuilder/theme/: __init__.py  color.py  elevation.py  shape.py  typo.py
phibuilder/widgets/: __init__.py  bottomsheet.py  button.py  card.py  chip_bar.py  combo.py  dateedit.py  dialog.py  dialogbuttonbox.py  frame.py  groupbox.py  headerview.py  label.py  listwidget.py  menu.py  navigation.py  profilebutton.py  progressbar.py  scrollarea.py  sidebar_nav.py  snackbar.py  splitter.py  stackedwidget.py  tab.py  table.py  textedit.py  textfield.py  timeedit.py
tests/: test_file_panel.py  test_file_resolver.py  test_file_viewer.py  test_l10n.py  test_table_settings.py
tests/tests/: test_widgets.py
