[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "larccommon"
version = "0.1.0"
description = "Bibliothèque commune Larc — UI toolkit (PhiBuilder), infrastructure partagée (DB, auth, logger, l10n)"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "materialyoucolor>=3.0",
    "PySide6>=6.5",
    "psycopg2-binary>=2.9",
]

[tool.setuptools.packages.find]
include = ["larccommon*", "phibuilder*"]
